<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:keep="@layout/recipe_list_item">

    <data>

        <variable
            name="recipe"
            type="com.naijaplanet.magosla.android.thebaker.data.models.Recipe" />
...
