...
                    android:padding="@dimen/default_padding_margin"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:text="@string/recipe_steps"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recipe_steps"
                    android:layout_width="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:layout_height="wrap_content"
                    tools:targetApi="lollipop" />

                <TextView
...
